After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693212 - dvbsrc: needs to handle EINTR instead of erroring out
dvbsrc: needs to handle EINTR instead of erroring out
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.0.5
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-05 16:37 UTC by Jan ONDREJ (SAL)
Modified: 2013-02-05 16:46 UTC
See Also:
GNOME target: ---
GNOME version: 3.5/3.6


Attachments
GST_DEBUG=dvbsrc:9 logs (39.53 KB, text/plain)
2013-02-05 16:37 UTC, Jan ONDREJ (SAL)
Details

Description Jan ONDREJ (SAL) 2013-02-05 16:37:56 UTC
Created attachment 235228 [details]
GST_DEBUG=dvbsrc:9 logs

In my application (svplayer) starting DVB-T playback fails. By switching to another channel or running my application in "strace -e open -f" will help, but first run without strace always fails.
Gstreamer logs attached.

I don't know, how to switch to EN language in logs, so here are translations:
Nepodarilo sa čítať zo zdroja. = Unable to read from source
Prerušené volanie systému = Interrupted system call
Comment 1 Wim Taymans 2013-02-05 16:41:48 UTC
commit 705a60d81ae1e0102ffccb6e0d061f482048cd68
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Tue Feb 5 17:34:28 2013 +0100

    dvbsrc: handle EINTR from poll
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=693212