dvbsrc: handle EINTR from poll

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=693212